<resources>
    <string name="app_name">Favorite Scripture</string>
    <string name="verse">Verse</string>
    <string name="chapter">Chapter</string>
    <string name="book">Book</string>
    <string name="enter_your_favorite_scripture">Enter your favorite scripture</string>
    <string name="confirm">Confirm</string>
    <string name="save_scripture">Save Scripture</string>
    <string name="load_scripture">Load Scripture</string>
</resources>